--- a/index.html
+++ b/index.html
@@ -5,8 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        div{
+            font-size: 20px;
+            width: 200px;
+            height: 200px;
+            background-color: blueviolet;
+        }
+    </style>
 </head>
 <body>
-    
+    <div>1223</div>
 </body>
 </html>
